fix: Don’t wrap copyright & ISO logo in footer

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -114,7 +114,7 @@ body {
 
     @media screen and (min-width: $bigscreenBreakpoint) {
       display: flex;
-      flex-flow: row wrap;
+      flex-flow: row nowrap;
       align-items: center;
       justify-content: flex-end;
 
